--- a/assets/styles.css
+++ b/assets/styles.css
@@ -8,26 +8,26 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5); 
-    padding-top: 60px;
+    padding-top: 75px;
 }
 
 .modal-content {
-    background-color: #fefefe;
+    background-color: #090909;
     margin: 5% auto;
     padding: 20px;
-    border: 1px solid #888;
+    border: 1px solid #ab9e9e;
     width: 300px;
     border-radius: 8px;
 }
 
 .close {
     color: #aaa;
-    font-size: 28px;
+    font-size: 40px;
     font-weight: bold;
     position: absolute;
     top: 0;
     right: 0;
-    padding: 10px;
+    padding: 15px;
     cursor: pointer;
 }
 
