--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,4 +1,8 @@
-
+.container-fluid {
+    background-color: lightblue;
+    color: #555;
+    text-align: center;
+}
 .modal {
     display: none; 
     position: fixed; 
