--- a/assets/styles.css
+++ b/assets/styles.css
@@ -49,3 +49,14 @@ input, button {
 button:hover {
     background-color: #f1f1f1;
 }
+
+.title {
+    font-family: 'Courier New', Courier, monospace;
+    border-bottom: 2px solid black;
+}
+
+.img {
+    height: 300px;
+    width: 400px;
+    border: 2px solid black;
+}
